# data

./: .gitignore  README.md  compress_regis.py  pyproject.toml
.github/workflows/: build.yml  data-validation.yml  lint.yml
src/nhflodata/: __init__.py  get_paths.py
src/nhflodata/data/: repository.yaml
src/nhflodata/data/mockup/: README.md
src/nhflodata/data/mockup/Grid_refinement_Vlotter/v1.0.0/: Contour_Vlotter.dbf  Contour_Vlotter.geojson  Contour_Vlotter.shp  Contour_Vlotter.shx  Lakes_refinement.dbf  Lakes_refinement.qmd  Lakes_refinement.shp  Lakes_refinement.shx  Refinement_1.dbf  Refinement_1.geojson  Refinement_1.qmd  Refinement_1.shp  Refinement_1.shx  Refinement_2.geojson  Refinement_2.shp  Refinement_2.shx  Refinement_3.dbf  Refinement_3.geojson  Refinement_3.shp  Refinement_3.shx  Stroomgebied_vlotter.dbf  Stroomgebied_vlotter.geojson  Stroomgebied_vlotter.qmd
src/nhflodata/data/mockup/HLc_6_aanpassing_Vlotter/v1.0.0/: Fix_HLc_6_gaps.dbf  Fix_HLc_6_gaps.shp  Fix_HLc_6_gaps.shx  HLc_6_aanpassing_Vlotter.qmd  HLc_6_aanpassing_Vlotter.shp  HLc_6_aanpassing_Vlotter.shx
src/nhflodata/data/mockup/Lakes_Vlotter/v1.0.0/: Lakes_Vlotter.dbf  Lakes_Vlotter.geojson  Lakes_Vlotter.qix  Lakes_Vlotter.qmd  Lakes_Vlotter.shp  Lakes_Vlotter.shx  Lakes_Vlotter_test.dbf  Lakes_Vlotter_test.qmd  Lakes_Vlotter_test.shp  Lakes_Vlotter_test.shx
src/nhflodata/data/mockup/Measurements_Vlotter/v1.0.0/: Metingen_Vlotter.xlsx
src/nhflodata/data/mockup/Mensink_cropfactor/v1.0.0/: Cropfactor.geojson
src/nhflodata/data/mockup/Mensink_gebouwen/v1.0.0/: Gebouwen_Mensink.geojson  Mensink_gebouwen.geojson  Mensink_gebouwen.qmd
src/nhflodata/data/mockup/Mensink_metingen/v1.0.0/: grondwaterstanden_Mensink_data_only.csv  grondwaterstanden_Mensink_data_only.xlsx
src/nhflodata/data/mockup/Mensink_no_drn_buffer/v1.0.0/: No_drain_buffer.geojson
src/nhflodata/data/mockup/Mensink_oppervlaktewater/v1.0.0/: DRN_package_07mensink.geojson
src/nhflodata/data/mockup/Mensink_putten_scenarios/v1.0.0/: Huidige_situatie_13_putten.geojson  Variant_1_putten_enkel_Mensink.geojson  Variant_2_9_putten_uitval_noord.geojson  Variant_2_9_putten_uitval_zuid.geojson  Variant_2_9_putten_uitval_zuid.qmd  Wells_10_enkel_Mensink.geojson  Wells_10_enkel_Mensink.qmd  Wells_PWN_excl_mensink.geojson
src/nhflodata/data/mockup/Mensink_refinement/v1.0.0/: Refinement_niveau_1.geojson  Refinement_niveau_3.geojson
src/nhflodata/data/mockup/Oppervlaktewater_Vlotter/v1.0.0/: Oppervlaktewater_Vlotter.dbf  Oppervlaktewater_Vlotter.qix  Oppervlaktewater_Vlotter.qmd  Oppervlaktewater_Vlotter.shp  Oppervlaktewater_Vlotter.shx  Oppervlaktewater_Vlotter_voor_herinrichting.dbf  Oppervlaktewater_Vlotter_voor_herinrichting.qix  Oppervlaktewater_Vlotter_voor_herinrichting.qmd  Oppervlaktewater_Vlotter_voor_herinrichting.shp  Oppervlaktewater_Vlotter_voor_herinrichting.shx
src/nhflodata/data/mockup/Refinement_Mensink/v1.0.0/: Refinement_niveau_1.geojson  Refinement_niveau_3.geojson  Refinement_niveau_3.qmd
src/nhflodata/data/mockup/Stroomgebied_Vlotter/: Stroomgebied_Vlotter.dbf  Stroomgebied_Vlotter.shx
src/nhflodata/data/mockup/Stroomgebied_Vlotter/v1.0.0/: Stroomgebied_Vlotter.dbf  Stroomgebied_Vlotter.qmd  Stroomgebied_Vlotter.shp
src/nhflodata/data/mockup/andijk_bodemlagen/v1.0.0/: Dikte_laag_basisveen.geojson  Existing_pools._dissolved.dbf  Existing_pools._dissolved.shp  Existing_pools._dissolved.shx  Nieuw_gebied.dbf  Nieuw_gebied.qix  Nieuw_gebied.shp  Nieuw_gebied.shx  Polygoon_peat.dbf  Polygoon_peat.sbn  Polygoon_peat.sbx  Polygoon_peat.shp  Polygoon_peat.shp.xml  Polygoon_peat.shx  Polygoon_peat_2.dbf  Polygoon_peat_2.qix  Polygoon_peat_2.shp  Polygoon_peat_2.shp.xml  Polygoon_peat_2.shx  Transition.dbf  Transition.qix  Transition.shp  Transition.shx  andijk_koppeltabel.csv  bgt_filtered.dbf  bgt_filtered.shp  bgt_filtered.shx
src/nhflodata/data/mockup/bodemlagen_pwn_2024/v1.0.0/: interpolate_layer_boundaries.py  interpolation_helper_functions.py
src/nhflodata/data/mockup/bodemlagen_pwn_2024/v2.0.0/: interpolate_layer_boundaries.py  interpolation_helper_functions.py  merge_masks.py
src/nhflodata/data/mockup/bodemlagen_pwn_bergen/v2.0.0/: Ontleding_model.xlsx  basismodel_MODEL.INI
src/nhflodata/data/mockup/bodemlagen_pwn_doorsneelijnen/v1.0.0/: convert.py  koster_AA_pt.geojson  koster_DD_pt.geojson  koster_EE_pt.geojson  koster_FF_pt.geojson  koster_GG_pt.geojson  noord_zuid_pt.geojson  stuyfzand_BB_pt.geojson  stuyfzand_ZN_pt.geojson
src/nhflodata/data/mockup/bodemlagen_pwn_nhdz/v1.0.0/: Ontleding_model_v2.xlsx
src/nhflodata/data/mockup/bodemlagen_pwn_nhdz/v2.0.0/: Modelopzet_model.ini  Ontleding_model.xlsx  Ontleding_model_v2.xlsx  SimBasis_model.ini
src/nhflodata/data/mockup/bodemlagen_pwn_regis_koppeltabel/v1.0.0/: combine_regis_gtop_pwn.csv
src/nhflodata/data/mockup/bodemlagen_pwn_regis_koppeltabel/v1.1.0/: bodemlagenvertaaltabelv2.csv  combine_regis_gtop_pwn.csv
src/nhflodata/data/mockup/bofek/v1.0.0/: bofek_2020_v_1_0.csv
src/nhflodata/data/mockup/doorsnedes_nh/v1.0.0/: doorsnedes.geojson  doorsnedes.gpkg
tests/: __init__.py  schema_repository.yaml  test_forbidden_file_formats.py  test_geojson_content.py  test_mockup_folder_structure.py  test_repository_yaml.py
(+733 files in other folders)
