[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nhflodata"
version = "1.0.0"
description = "Data part of the NHFLO modeling environment owned by HHNK, Artesia, and PWN."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
authors = [
  {name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl"},
]
maintainers = [
  {name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl"},
]
keywords = [
  "NHFLO",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

dependencies = ["pyyaml>=6.0.1",]

[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
    "pytest"
]

[tool.hatch.envs.default.scripts]
lint = [
  "ruff check .",
]
format = ["ruff check --fix", "ruff format", "lint",]
test = ["pytest ./src/ ./tests/",]  # --doctest-modules
fast-test = ["pytest ./tests/ -m \"not slow\"",]

[tool.hatch.envs.matrix_test]
features = ["dev"]

[[tool.hatch.envs.matrix_test.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.matrix_test.scripts]
test = ["pytest ./tests/",]  # --doctest-modules

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]