[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Topic :: Utilities",
]
description = "Data part of the NHFLO modeling environment owned by HHNK, Artesia, and PWN."
keywords = ["NHFLO"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
name = "nhflodata"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"

dependencies = ["pyyaml>=6.0.1"]

[project.optional-dependencies]
dev = [
  "hatch",
  "mypy",
  "pytest",
  "ruff",
  "types-PyYAML", # for pyyaml types
]

[tool.hatch.envs.default.scripts]
fast-test = ["pytest ./tests/ -m \"not slow\""]
format = ["lint", "ruff check --fix", "ruff format"]
lint = ["mypy src/", "ruff check ."]
test = ["pytest ./src/ ./tests/"]                    # --doctest-modules

[tool.hatch.envs.matrix_test]
features = ["dev"]

[[tool.hatch.envs.matrix_test.matrix]]
python = ["3.10", "3.11", "3.9"]

[tool.hatch.envs.matrix_test.scripts]
test = ["pytest ./tests/"] # --doctest-modules

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true # Preferably false, but matplotlib, scipy and statsmodels are missing typing stubs
python_version = "3.10"
