[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Topic :: Utilities",
]
description = "Data part of the NHFLO modeling environment owned by HHNK, Artesia, and PWN."
keywords = ["NHFLO"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
name = "nhflodata"
readme = "README.md"
requires-python = "3.11"
version = "1.1.0"

dependencies = ["pyyaml>=6.0.1"]

[project.optional-dependencies]
lintformat = [
  "hatch",
  "mypy",
  "ruff==0.6.8",
  "types-PyYAML", # for pyyaml types
]
test = [
  "pytest",
  "yamale",
  "yamllint",
]

[tool.hatch.envs.default]
installer = "uv"
python = "3.11"

[tool.hatch.envs.lintformat]
detached = true
features = ["lintformat"]

[tool.hatch.envs.lintformat.scripts]
format = ["ruff check --fix --unsafe-fixes src/nhflodata/*.py tests", "ruff format src/nhflodata/*.py tests"]
lint = ["ruff check src/nhflodata/*.py tests", "mypy src/nhflodata/*.py"]
lintminimal = ["ruff check src/nhflodata/*.py tests --config \"lint.select=['E4', 'E7', 'E9', 'F']\""]

[tool.hatch.envs.test]
detached = false
features = ["test"]

[tool.hatch.envs.test.scripts]
test = ["pytest tests -v"]
test-repository-yaml = ["pytest tests/test_repository_yaml.py -v"]
test-mockup-folder-structure = ["pytest tests/test_mockup_folder_structure.py -v"]

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
